[gd_scene load_steps=2 format=3 uid="uid://dkgb6c1t0is5x"]

[ext_resource type="Script" uid="uid://dt8f7vktkj3vi" path="res://UI/main_menu.gd" id="1_p8ccj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8ccj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.116537, 0.264808, 0.333799, 1)

[node name="GameButton" type="Button" parent="."]
offset_left = 384.0
offset_top = 296.0
offset_right = 792.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
offset_left = 264.0
offset_top = 448.0
offset_right = 456.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 448.0
offset_right = 672.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="ExitButton" type="Button" parent="."]
offset_left = 696.0
offset_top = 448.0
offset_right = 888.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 440.0
offset_top = 128.0
offset_right = 740.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 50
text = "Game Name"

[connection signal="pressed" from="GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
